made changes to the path of my assesting files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="/Portofolio_Homework/assests/css/style.css">
+    <link rel="stylesheet" href="./assests/css/style.css">
 </head>
 <body>
 <div class="nav">
@@ -34,7 +34,7 @@
                 <hr>
             </div>
             <div class="imgbox">
-                <img src="/Portofolio_Homework/assests/images/al.jpg">
+                <img src="./assests/images/al.jpg">
             </div>
             <p id ="firstp"><b>Life is beatiful and still only for people who pursue the dream.</b></p>
             <p>My dream is to be a profesional programmer, I know it needs a real
