--- a/index.html
+++ b/index.html
@@ -36,23 +36,18 @@
             <div class="imgbox">
                 <img src="./assests/images/al.jpg">
             </div>
-            <p id ="firstp"><b>Life is beatiful and still only for people who pursue the dream.</b></p>
-            <p>My dream is to be a profesional programmer, I know it needs a real
-                hard work, it is not just snacking and imaging it may need you to
-                change your whole life, change how you see things , and that is what I
-            am doing right now.
-            see!!! I seems to be a phylospher too :).
-            so it was good to talk about my dream, now it's time to tell you my plan to do that:</p>
-            <p>
-                <ul>
-                    <li>Find a program that develop a skill which in demand in now career market.</li>
-                    <li>Study hard within the program and put your commitment and faith to finish it <br>as well as it requierd or even more.</li>
-                    <li>Work hard on yourself and put all your potential in developing your skills of<br> communication and presentation to be as employer desire.</li>
-                    <li>Get a good job that pay you enough and has a free time to use it to study.</li>
-                    <li>Continue pursuing your dream of getting the Degrees and knowledge you plan to gain in your mind.</li>
-                    <li>Remeber life is not easy for all people but maybe for some.<br><b> DON'T RELY ON LIFE CIRCUMSTANCES JUST KEEP FITING.</b></li>
-                </ul>
-            </p>
+             <p>Life is beatiful and still only for people who pursue the dream.
+
+                    My dream is to be a profesional programmer, I know it needs a real hard work, it is not just snacking and imagining it may need you to change your whole life, change how you see things , and that is what I am doing right now. see!!! I seems to be a philosopher too :). so it was good to talk about my dream, now it's time to tell you my plan to do that:
+                <br>Find a program that develop a skill which in demand in now career market.
+                Study hard within the program and put your commitment and faith to finish it 
+                as well as it requierd or even more.
+                Work hard on yourself and put all your potential in developing your skills of
+                communication and presentation to be as employer desire.
+                Get a good job that pay you enough and has a free time to use it to study.
+                Continue pursuing your dream of getting the Degrees and knowledge you plan to gain in your mind.
+                Remeber life is not easy for all people but maybe for some.
+                DON'T RELY ON LIFE CIRCUMSTANCES JUST KEEP FIGHTING.</p>
         </div>
     </div>
     <div class="beforfooter"></div>
